--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-spacex-dragons-page></app-spacex-dragons-page>
+<!--<app-spacex-dragons-page></app-spacex-dragons-page>-->
+<app-spacex-next-launch-page></app-spacex-next-launch-page>
