--- a/src/app/spacex-next-launch/components/launch/launch.component.html
+++ b/src/app/spacex-next-launch/components/launch/launch.component.html
@@ -1,8 +1,9 @@
 <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+  <img alt="..." class="card-img-top" src="">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <h5 class="card-title text-danger">{{launch?.mission_name}}</h5>
+    <p class="card-text">{{launch?.details}}</p>
+    <p class="card-text">{{launch?.launch_year}}</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
