NavBar is working!

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<!--<app-spacex-dragons-page></app-spacex-dragons-page>-->
-<app-spacex-next-launch-page></app-spacex-next-launch-page>
+<!--<app-spacex-dragons-page class="bg-dark"></app-spacex-dragons-page>-->
+<!--<app-spacex-next-launch-page></app-spacex-next-launch-page>-->
+<app-spacex-navbar [routes]="routes"></app-spacex-navbar>
+<router-outlet></router-outlet>
