--- a/src/app/spacex-dragons/pages/spacex-dragons-page/spacex-dragons-page.component.html
+++ b/src/app/spacex-dragons/pages/spacex-dragons-page/spacex-dragons-page.component.html
@@ -1,1 +1,1 @@
-<app-dragons-list style="justify-items: center"></app-dragons-list>
+<app-dragons-list class="d-flex flex-wrap justify-content-around gap-3"></app-dragons-list>
