Search-bar added!

--- a/src/app/shared/components/spacex-navbar/spacex-navbar.component.html
+++ b/src/app/shared/components/spacex-navbar/spacex-navbar.component.html
@@ -1,5 +1,5 @@
-<ul class="nav justify-content-center nav-pills ">
+<ul class="nav justify-content-center nav-pills nav-pills" style="padding: 20px; ">
   <li *ngFor="let link of routes" class="nav-item " routerLink="{{ link.route }}">
-    <a class="nav-link text-white" routerLinkActive="active">{{ link.label }}</a>
+    <a class="nav-link " routerLinkActive="active">{{ link.label }}</a>
   </li>
 </ul>
