--- a/src/app/spacex-past-launches/components/launch-list/launch-list.component.html
+++ b/src/app/spacex-past-launches/components/launch-list/launch-list.component.html
@@ -1,1 +1,3 @@
+<app-spacex-search-bar (onValueChange)="onSearchChange($event)"></app-spacex-search-bar>
 <app-launch *ngFor="let launch of launches" [launch]="launch"></app-launch>
+
