--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-
+<app-spacex-top-logo></app-spacex-top-logo>
 <app-spacex-navbar [routes]="routes"></app-spacex-navbar>
 <router-outlet></router-outlet>
