--- a/src/app/shared/components/spacex-search-bar/spacex-search-bar.component.html
+++ b/src/app/shared/components/spacex-search-bar/spacex-search-bar.component.html
@@ -1,1 +1,1 @@
-<input [formControl]="searchInput" class="form-control" id="search-bar" placeholder="Type Mission Name...">
+<input [formControl]="searchInput" class="form-control" id="search-bar" placeholder="{{placeholder}}">
