Next Launch module is working!

--- a/src/app/spacex-dragons/components/dragons-list/dragons-list.component.html
+++ b/src/app/spacex-dragons/components/dragons-list/dragons-list.component.html
@@ -1,6 +1,6 @@
 <app-spacex-search-bar (onValueChange)="onSearchChange($event)" [placeholder]="placeholder"
                        class="badge"></app-spacex-search-bar>
 
-<div class="d-flex flex-wrap justify-content-around gap-3">
+<div class="d-flex flex-wrap justify-content-center gap-2">
   <app-dragon *ngFor="let dragon of dragons" [dragon]="dragon"></app-dragon>
 </div>
