--- a/src/app/spacex-next-launch/pages/spacex-next-launch-page/spacex-next-launch-page.component.html
+++ b/src/app/spacex-next-launch/pages/spacex-next-launch-page/spacex-next-launch-page.component.html
@@ -1,1 +1,3 @@
-<p>Hello</p>
+<div class="d-flex justify-content-center" style="margin: 30px">
+  <app-next-launch-list></app-next-launch-list>
+</div>
