--- a/src/app/spacex-past-launches/components/launch-list/launch-list.component.html
+++ b/src/app/spacex-past-launches/components/launch-list/launch-list.component.html
@@ -1,6 +1,6 @@
 <app-spacex-search-bar (onValueChange)="onSearchChange($event)" [placeholder]="placeholder"
                        class="badge"></app-spacex-search-bar>
 
-<div class="d-flex flex-wrap justify-content-around gap-1">
+<div class="d-flex flex-wrap  justify-content-center gap-2" style="margin: 20px">
   <app-launch *ngFor="let launch of launches" [launch]="launch"></app-launch>
 </div>
