Undefined in firstUp pipe

--- a/src/app/shared/components/dragon/dragon.component.html
+++ b/src/app/shared/components/dragon/dragon.component.html
@@ -6,3 +6,4 @@
     <a class="btn btn-primary" href="{{dragon?.wikipedia}}" target="_blank">More Info!</a>
   </div>
 </div>
+<!--TODO pipe with firstUp text form wiki-->
