--- a/src/app/spacex-next-launch/components/next-launch-list/next-launch-list.component.html
+++ b/src/app/spacex-next-launch/components/next-launch-list/next-launch-list.component.html
@@ -3,7 +3,7 @@
   <div class="card-body">
     <h5 class="card-title">{{launch?.name}}</h5>
     <p class="card-text">{{launch?.details}}</p>
-    <p class="card-text">{{launch?.date_local}}</p>
+    <p class="card-text">{{launch?.date_local| date: 'dd/MM/YYYY hh:mm:ss'}}</p>
     <a class="btn btn-primary" href="{{launch?.links?.wikipedia}}">Go somewhere</a>
   </div>
 </div>
