--- a/src/app/shared/components/dragon/dragon.component.html
+++ b/src/app/shared/components/dragon/dragon.component.html
@@ -2,8 +2,8 @@
   <img alt="..." class="card-img-top" src="{{dragon?.flickr_images}}">
   <div class="card-body">
     <h5 class="card-title text-danger">{{dragon?.name}}</h5>
-    <p class="card-text">{{dragon?.description}}</p>
-    <a class="btn btn-primary" href="{{dragon?.wikipedia | firstUp}}" target="_blank">More Info!</a>
+    <p class="card-text">{{dragon?.description |firstUp }}</p>
+    <a class="btn btn-primary" href="{{dragon?.wikipedia}}" target="_blank">More Info!</a>
   </div>
 </div>
-<!--TODO pipe with firstUp text form wiki-->
+
