--- a/src/app/spacex-to-do/components/spacex-to-do-item-creator/spacex-to-do-item-creator.component.html
+++ b/src/app/spacex-to-do/components/spacex-to-do-item-creator/spacex-to-do-item-creator.component.html
@@ -1,23 +1,8 @@
-<div class="card" style="width: 25rem; background-color: gainsboro">
-  <form class="row g-3 needs-validation" novalidate>
-
-    <div class="col-md-4">
-      <input class="form-control" id="validationCustom01" placeholder="Enter mission name..." type="text">
-      <div class="valid-feedback">
-        Looks good!
-      </div>
-    </div>
-
-    <div class="col-md-4">
-      <input class="form-control" id="validationCustom02" required type="text" value="Otto">
-      <div class="valid-feedback">
-        Looks good!
-      </div>
-    </div>
-
-    <div class="col-12">
-      <button class="btn btn-primary" type="submit">Submit form</button>
-    </div>
+<div class="creator-container" style="width: 25rem">
+  <form (ngSubmit)="onItemSubmit()" [formGroup]="itemCreator">
+    <input class="form-control" formControlName="itemLabel" placeholder="Type Mission" type="text">
+    <div *ngIf="hasRequiredError()" class="error">Label is required</div>
+    <div *ngIf="hasMinLengthError()" class="error">Min length is 3</div>
+    <div *ngIf="hasMinPatternError()" class="error">Only letters are allowed</div>
   </form>
 </div>
-
