to-do items mocked with list and styled

--- a/src/app/spacex-to-do/components/spacex-to-do-item-creator/spacex-to-do-item-creator.component.html
+++ b/src/app/spacex-to-do/components/spacex-to-do-item-creator/spacex-to-do-item-creator.component.html
@@ -1,4 +1,4 @@
-<div class="creator-container" style="width: 25rem">
+<div class="creator-container" style="width: 25rem; margin-left: 8px">
   <form (ngSubmit)="onItemSubmit()" [formGroup]="itemCreator">
     <input class="form-control" formControlName="itemLabel" placeholder="Type Mission" type="text">
     <div *ngIf="hasRequiredError()" class="error">Label is required</div>
