--- a/src/app/spacex-to-do/containers/spacex-to-do-list/spacex-to-do-list.component.html
+++ b/src/app/spacex-to-do/containers/spacex-to-do-list/spacex-to-do-list.component.html
@@ -2,7 +2,7 @@
   <app-spacex-to-do-item-creator (onItemCreate)="addToDoItem($event)"></app-spacex-to-do-item-creator>
 </div>
 
-<div class="to-do-list-container flex-column justify-content-center gap-2" style="margin: 20px">
+<div class="to-do-list-container flex-lg-row" style="margin: 20px">
   <app-spacex-to-do-item
     (onDeleteClick)="onItemDelete($event)" (onDoneClick)="onItemDone($event)"
     (onNotDoneClick)="onItemNotDone($event)"
